<resources>
    <string name="app_name">TaxApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="drawer_header_user_avatar_content_description">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_not_found">Не найдено</string>
    <string name="sign_up_error_email_already_use">The email address is already in use by another account.</string>
    <string name="auth_error_session_expire">Сессия истекла</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="default_user_name_name">Локальная запись</string>
    <string name="default_account_name">Основной аккаунт</string>
    <string name="response_error_data_is_empty"></string>


    <string name="data_error_connection">Проверьте соединение с интернетом и попробуйте еще раз</string>

    <string name="transaction_tax_is_empty">ожидание интернета</string>

    <string-array name="symbols">
        <item name="rub">@string/symbol_rub</item>
    </string-array>

    <string name="symbol_rub">₽</string>

    <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->

    <!--Menu-->
    <string name="menu_home">Home</string>
    <string name="menuExit">Выйти</string>
    <string name="menuChangeAccount">Другой счёт</string>
    <string name="menu_rates_today_name">Курсы сегодня</string>
    <string name="menu_converter_name">Конвертер валют</string>
    <string name="menuNewTransaction">Новая сделка</string>
    <string name="menuTransactionDetail">Редактирование сделки</string>
    <string name="menuTransactions">Годовой отчет</string>
    <string name="taxes_name">Налоги</string>


    <!--LoginFragment-->
    <string name="button_sign_in">Войти</string>
    <string name="button_sign_up">Зарегистрироваться</string>
    <string name="text_sign_under_bottom">Войдите в свою учетную запись</string>

    <!--SignInFragment-->
    <string name="edit_sign_in_email">E-mail</string>
    <string name="edit_sign_in_password">Пароль</string>
    <string name="button_sign_in_ok">Войти</string>
    <string name="button_sign_in_cancel">Отменить</string>
    <string name="text_sign_in_under_bottom">Войдите в свою учетную запись</string>
    <string name="authSuccess">Пользователь авторизован</string>
    <string name="authFailure">Ошибка авторизации. %s</string>
    <string name="error_sign_in">Неверные параметры входа! Повторите попытку.</string>

    <!--SelectAccountFragment-->
    <string name="buttonSelectOpen">Открыть</string>
    <string name="buttonSelectCreate">Создать</string>
    <string name="buttonSelectExit">Выйти</string>
    <string name="textSelectUnderBottom">Выберете существующий или создайте новый счет</string>
    <string name="account_select_accounts_loading">Идет загрузка доступных счетов. Пожалуйста, подождите.</string>

    <!--AccountAddFragment-->
    <string name="account_add_name_hint">Имя счета</string>

    <!--CurrencyRateFragment-->
    <string name="currency_rate_toolbar">Курс %s</string>

    <!--ConverterFragment-->
    <string name="currency">Валюта</string>

    <!--Registration Fragment-->
    <string name="edit_sign_up_name">Имя</string>
    <string name="edit_sign_up_tel">Телефон</string>
    <string name="edit_sign_up_email">E-mail</string>
    <string name="edit_sign_up_password">Пароль</string>
    <string name="button_sign_up_ok">Подтвердить</string>
    <string name="button_sign_up_cancel">Отменить</string>
    <string name="text_sign_up_under_button">Заполните все поля</string>
    <string name="error_email_empty">Введите ваш email</string>
    <string name="error_email_incorrect">Некорректный email</string>
    <string name="error_name_range">Введите ваше имя (от 3 до 16 символов)</string>
    <string name="error_phone_empty">Введите ваш телефон</string>
    <string name="error_password_length">Введите пароль (от 8 до 16 символов)</string>
    <string name="message__sign_up_success">"Пользователь добавлен!"</string>

    <!--FirstAccountFragment-->
    <string name="edit_first_account">№ счета</string>
    <string name="button_first_account_ok">Создать</string>
    <string name="button_first_account_cancel">Пропустить</string>
    <string name="text_first_account_under_bottom">Введите имя счета</string>
    <string name="error_input_account_incorrect">Введите имя счета (от 3 до 16 символов)</string>

    <!-- TaxesFragment-->
    <string name="textTaxesYear">Отчетный год</string>
    <string name="textTaxesTax">Сумма налога</string>
    <string name="buttonTaxesAddTransaction">Добавить сделку</string>
    <string name="buttonTaxesLoadingStatement">Загрузить отчет</string>
    <string name="taxes_error_parse_report_from_excel">Не удалось конвертипровать файл</string>


    <!-- TransactionsFragment-->
    <string name="buttonTransAdd">Добавить сделку</string>
    <string name="buttonTransDelete">Удалить все</string>
    <string name="buttonTransDownload">Скачать отчет</string>
    <string name="buttonTransSendEmail">Отправить на E-mail</string>
    <string name="transactions_error_send_report">Не удалось отправить отчет.</string>
    <string name="transactions_title">%s год</string>
    <string name="transactions_subtitle">налог: %s ₽</string>

    <!-- TransactionsDeleteDialogFragment -->
    <string name="delete_dialog_title">Подтвердить операцию</string>
    <string name="delete_dialog_message">Вы уверены, что хотите безвозвратно удалить?</string>
    <string name="delete_dialog_ok">Да</string>
    <string name="delete_dialog_cancel">Отмена</string>


    <!-- transaction_list_item-->
    <string name="textCB">Курс ЦБ: </string>
    <string name="textTax">Налог: </string>

    <!-- NewTransactionFragment-->
    <string name="editNewTransId">Наименование операции</string>
    <string name="editNewTransDate">Дата сделки ДД/ММ/ГГГГ</string>
    <string name="editNewTransSum">Сумма</string>
    <string name="buttonNewTransAdd">Добавить</string>
    <string name="buttonNewTransCancel">Отменить</string>


    <!-- TransactionDetailFragment-->

    <string name="edit_detail_id">Наименование операции</string>
    <string name="edit_detail_type">Тип транзакции</string>
    <string name="edit_detail_date">Дата сделки ДД/ММ/ГГГГ</string>
    <string name="edit_detail_sum">Сумма</string>
    <string name="transaction_detail_delete_success">Сделка удалена</string>
    <string name="transaction_detail_save_success">Сделка обновлена</string>
    <string name="transaction_detail_add_error_load_rate">Не удалось загрузить курс валюты. Сделка не добавлена!</string>
    <string name="transaction_detail_save_fail">Не удалось обновить сделку</string>
    <string name="transaction_detail_error_name_too_long">Название слишком большое</string>
    <string name="transaction_detail_error_sum_empty">Укажите сумму</string>
    <string name="transaction_detail_error_sum_too_long">Сумма слишком большая</string>
    <string name="transaction_detail_error_date_format">Введите дату в формате ДД/ММ/ГГГГ</string>
    <string name="transaction_detail_error_date_range">Допустимы диапазон от 1992 года до сегодня</string>


    <!--ChangeAccountFragment-->
    <string name="buttonChangeAccountOpen">Открыть</string>
    <string name="buttonChangeAccountCreate">Создать</string>
    <string name="editChangeAccountName">Id нового счета</string>
    <string name="textChangeAccountUnderBottom">Выберете существующий или создайте новый счет</string>
    <string name="account_change_message_waite_loading">Идет загрузка доступных счетов. Пожалуйста, подождите.</string>
    <string name="drawer_header_add_name">Добавить аккаунт</string>
    <string name="add_name">Добавить</string>
    <string name="retry_name">Повторить</string>
    <string name="share_excel_name">Отправить</string>
    <string name="import_excel_name">Импорт</string>
    <string name="export_excel_name">Экспорт</string>
    <string name="save_name">Сохранить</string>
    <string name="delete_name">Удалить</string>
    <string name="data_error_internal">Внутренняя ошибка</string>
    <string name="data_external_error">внешняя ошибка</string>
    <string name="data_error">Ошибка</string>
    <string name="data_error_excel">ошибка экселя</string>
    <string name="data_error_cbr">Курс ЦБ РФ не найден</string>
    <string name="data_error_socket_timeout">Превышено время ожидания. Повторите попытку.</string>
    <string name="currency_converter_sum_rub">RUB</string>
    <string name="currency_converter_sum_hint">0.00</string>
    <string name="currency_converter_sum_default">1</string>
    <string name="sign_title_name">Вход</string>
    <string name="sign_out_name">Выход</string>
    <string name="drawer_header_user_account_expand_content_description">expand</string>

    <!-- share -->
    <string name="share_message_name">Расчёт налога от TaxApp</string>
    <string name="share_message_description">Отправка…</string>
    <string name="calendar_name">Календарь</string>

</resources>