<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tablet"
    tools:context=".ui.account.select.AccountSelectFragment">

    <TextView
        android:id="@+id/textViewSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/suez_one"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerSelectAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:minWidth="200dp"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSelectOpen"
            style="@style/StyleButtonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/buttonSelectOpen" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSelectNewAccountCreate"
            style="@style/StyleButtonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/buttonSelectCreate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSelectExit"
            style="@style/StyleButtonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/buttonSelectExit" />

    </LinearLayout>

    <TextView
        android:id="@+id/textSelectUnderBottom"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/textSelectUnderBottom"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

