<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tablet"
    tools:context=".ui.sign.up.SignUpFragment">

    <TextView
        android:id="@+id/logo"
        style="@style/StyleLogoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_margin_side"
        android:layout_marginEnd="@dimen/sign_margin_side"
        android:layout_marginBottom="@dimen/sign_up_margin_bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sign_up_edit_margin_bottom"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_sign_up_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size_16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sign_up_edit_margin_bottom"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sign_up_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_sign_up_tel"
                android:inputType="phone"
                android:textSize="@dimen/text_size_16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sign_up_edit_margin_bottom"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_sign_up_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sign_up_edit_margin_bottom"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_sign_up_password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_up_create"
            style="@style/StyleButtonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sign_margin_side"
            android:layout_marginTop="@dimen/sign_margin_vertical"
            android:layout_marginEnd="@dimen/sign_button_margin_between"
            android:layout_marginBottom="@dimen/sign_margin_vertical"
            android:layout_weight="0.8"
            android:text="@string/button_sign_up_ok"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_up_cancel"
            style="@style/StyleButtonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_margin_vertical"
            android:layout_marginEnd="@dimen/sign_margin_side"
            android:layout_marginBottom="@dimen/sign_margin_vertical"
            android:layout_weight="1"
            android:text="@string/button_sign_up_cancel" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_sign_up_under_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sign_margin_vertical"
        android:gravity="center"
        android:text="@string/text_sign_up_under_button"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>