<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.changeaccount.ChangeAccountFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerChangeAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:minWidth="200dp"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChangeAccountOpen"
            style="@style/StyleButtonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/buttonChangeAccountOpen" />

        <EditText
            android:id="@+id/editChangeAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/editChangeAccountName"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChangeAccountCreate"
            style="@style/StyleButtonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/buttonChangeAccountCreate" />


    </LinearLayout>

    <TextView
        android:id="@+id/textSelectUnderBottom"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/textChangeAccountUnderBottom"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>