<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tablet"
    tools:context=".ui.sign.SignFragment">

    <TextView
        android:id="@+id/text_sign_logo"
        style="@style/StyleLogoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_sign_in"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginBottom="@dimen/offset_24"
        android:text="@string/button_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_sing_up"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_sing_up"
        app:layout_constraintStart_toStartOf="@+id/button_sign_sing_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_sing_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_sign_in" />

    <TextView
        android:id="@+id/text_sign_in_under_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/offset_24"
        android:gravity="center"
        android:text="@string/text_sign_under_bottom"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>