<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/tablet"
    tools:context=".ui.account.first.AccountFirstFragment">

    <TextView
        android:id="@+id/logo"
        style="@style/StyleLogoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_margin_side"
        android:layout_marginEnd="@dimen/sign_margin_side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.35000002">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_first_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/edit_first_account"
            android:inputType="text"
            android:textSize="@dimen/text_size_16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_first_account_create"
            style="@style/StyleButtonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sign_margin_side"
            android:layout_marginTop="@dimen/sign_margin_vertical"
            android:layout_marginEnd="@dimen/sign_button_margin_between"
            android:layout_marginBottom="@dimen/sign_margin_vertical"
            android:layout_weight="1"
            android:text="@string/button_first_account_ok"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_first_account_cancel"
            style="@style/StyleButtonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sign_button_margin_between"
            android:layout_marginTop="@dimen/sign_margin_vertical"
            android:layout_marginEnd="@dimen/sign_margin_side"
            android:layout_marginBottom="@dimen/sign_margin_vertical"
            android:layout_weight="1"
            android:text="@string/button_first_account_cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_under_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sign_margin_vertical"
        android:gravity="center"
        android:text="@string/text_first_account_under_bottom"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>